--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img src="images/home/home.jpg" alt="profile-image">
                         
                         <!-- image-logo -->
-                  <a class="header-title-link" href="index.html"><img src="../images/site/avatar.jpg" alt="avatar"></a>-->
+                  <a class="header-title-link" href="index.html"><img src="../images/site/avatar.jpg"></a>
                     
                         <h1 class="site-title">Alex Zeis</h1>
                         <p class="site-description">I am <strong id="typist-element" data-typist="a blogger., a wordpress lover., an adventurer.">a writer.</strong></p>
