--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                        <a class="header-title-link" href="index.html"><img src="../images/site/logo.png"></a> -->
                         
                         <a href="https://angadluthra.github.io/Angad-Luthra/index.html">
-<img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/logo.png" width="672" height="297">
+<img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/logo.png?raw=true" width="672" height="297">
                     
                         <!-- <h1 class="site-title">Alex Zeis</h1>
                         <p class="site-description">I am <strong id="typist-element" data-typist="a blogger., a wordpress lover., an adventurer.">a writer.</strong></p> -->
