--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/finallogo.png?raw=true" width="672" height="297">
                     
                         <!-- <h1 class="site-title">Alex sZeis</h1> -->
-                        <p class="site-description">I am <strong id="typist-element" data-typist="a designer., an innovator., an entrepreneur.">a practical guy.</strong></p> -->
+                        <p class="site-description">I am <strong id="typist-element" data-typist="a designer., an innovator., an entrepreneur.">a practical guy.</strong></p>
                         
                         <!-- header-social -->
                         <div class="header-bottom">
