--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                        <a class="header-title-link" href="index.html"><img src="../images/site/logo.png"></a> -->
                         
                         <a href="https://angadluthra.github.io/Angad-Luthra/index.html">
-<img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/finallogo.png?raw=true" width="672" height="297">
+<img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/finallogo.png?raw=true" width="672" height="297" margin-top:40px>
                     
                         <!-- <h1 class="site-title">Alex sZeis</h1> -->
                         <p class="site-description">I am <strong id="typist-element" data-typist="a designer., an innovator., an entrepreneur.">a practical guy.</strong></p>
