--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                         
                             <!-- SOCIAL -->
                             <p>
-                                <a class="social-link facebook" href="#"></a>
-                                <a class="social-link twitter" href="#"></a>
-                                <a class="social-link linkedin" href="#"></a>
-                                <a class="social-link instagram" href="#"></a>
+                                <a class="social-link facebook" href="https://www.facebook.com/angadsinghluthra"></a>
+                                <a class="social-link website" href="https://www.nukewebbed.com"></a>
+                                <a class="social-link linkedin" href="https://in.linkedin.com/in/angadsinghluthra"></a>
+                                <a class="social-link instagram" href="https://wwww.instagram.com/angadluthra"></a>
                             </p>
                             <!-- SOCIAL -->
                             
