--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@ document.oncontextmenu=new Function("return false")
                                         <!-- .col-md-6 -->
                                         <div class="col-md-6">
                                         	
-                                            <!-- GOOGLE MAP -->
-                                            <div class="map">
-                                                <div data-latitude="29.720157" data-longitude="-95.4013379" data-zoom="4" data-marker-image="images/site/marker.png" id="map-canvas" class="map-canvas"></div>
-                                            </div>
-                                            <!-- GOOGLE MAP -->
+                                           <!-- GOOGLE MAP -->
+<div class="map">
+	<div data-latitude="-25.363882" data-longitude="131.044922" data-zoom="5" data-marker-image="images/site/marker.png" id="map-canvas" class="map-canvas"></div>
+</div>
+<!-- GOOGLE MAP -->
                                             
                                         </div>
                                         <!-- .col-md-6 -->
