--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ document.oncontextmenu=new Function("return false")
         <script src="js/jquery.validate.min.js"></script>
         <script src="js/jquery.magnific-popup/jquery.magnific-popup.min.js"></script>
         
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js/></script>
         <!--
         if your map doesn't show by default, you need google map api key;
         Get you api key here : https://developers.google.com/maps/documentation/javascript/get-api-key
