--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="uCard - Responsive HTML5 vCard Template">
-        <meta name="keywords" content="vcard, html5, portfolio">
-        <meta name="author" content="Pixelwars">
+        <meta name="description" content="Angad Luthra's Personal Portfolio">
+        <meta name="keywords" content="vcard, html5, portfolio, india, wordlwide">
+        <meta name="author" content="Angad Luthra">
 
         <title>Angad Luthra </title>
 
