Home, 404 contact still need to do

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js ">
+<html lang="en" class="no-js">
 <head>
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="uCard - Responsive HTML5 vCard Template">
-        <meta name="keywords" content="vcard, html5, portfolio">
-        <meta name="author" content="Pixelwars">
+        <meta name="description" content="Angad Luthra's Personal Portfolio">
+        <meta name="keywords" content="vcard, html5, portfolio, india, wordlwide">
+        <meta name="author" content="Angad Luthra">
 
-        <title>uCard</title>
+        <title>Angad Luthra </title>
+
+
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/ico/favicon.ico">
