--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@
                                                 <!-- section-title -->
                                                 <div class="section-title center">    
                                                     <h2>
-                                                        <i>clients</i>
+                                                        <i>clients and press</i>
                                                     </h2>
                                                 </div>
                                                 <!-- section-title -->
