--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ document.oncontextmenu=new Function("return false")
                                     	<img src="images/home/portfolio.jpg" alt="image">	
                                         <a id="portfolio-link" href="portfolio.html" data-slug="portfolio">
                                             <div>
-                                            	<i class="pe-7s-portfolio"></i>
+                                            	<i class="pe-7s-map"></i>
                                                 <h2>portfolio</h2>
                                                 <p>Find out what i have done so far.</p>
                                                 <b>View More</b>
@@ -211,11 +211,11 @@ document.oncontextmenu=new Function("return false")
                         
                                     <li class="cd-item">
                                    		<img src="images/home/blog.jpg" alt="image">
-                                        <a href="blog-latest.html" data-slug="blog">
+                                        <a href="inspiration-single.html" data-slug="inspiration">
                                             <div>
-                                            	<i class="pe-7s-notebook"></i>
-                                                <h2>blog</h2>
-                                                <p>Sometimes i do write about stuff.</p>
+                                            	<i class="pe-7s-wine"></i>
+                                                <h2>inspiration</h2>
+                                                <p>Yeah, sometimes.</p>
                                                 <b>View More</b>
                                             </div>
                                         </a>
