--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                         <!-- image-logo -->
                         <!--<a class="header-title-link" href="index.html"><img src="../images/site/avatar.jpg" alt="avatar"></a>-->
         
-                             <a class="header-title-link"href="https://angadluthra.github.io/Angad-Luthra/index.html">
+                             <a class="header-title-link"href="https://angadluthra.me">
 <img border="0" alt="Logo" src="https://github.com/angadluthra/Angad-Luthra/blob/gh-pages/images/site/finallogo.png?raw=true" width="448" height="198"> 
                         </a>
                         
