--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ $(document).ready(function () {
                         
                                     <li class="cd-item">
                                    		<img src="images/home/blog.jpg" alt="image">
-                                        <a href="inspiration-single.html" data-slug="inspiration">
+                                        <a href="inspiration.html" data-slug="inspiration">
                                             <div>
                                             	<i class="pe-7s-wine"></i>
                                                 <h2>inspiration</h2>
