--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@
                                                     <div class="media-cell media hentry">
                             
                                                         <div class="media-box">
-                                                            <img src="images/portfolio/01.jpg" alt="portfolio-post">
+                                                            <img src="images/Portfolio/01.jpg" alt="portfolio-post">
                                                             <div class="mask"></div>
                                                             <a href="portfolio-item-01.html" class="ajax"></a>
                                                         </div>
