--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav>
-<div class="main" style="background-image: url('images/home/portfolio.jpg')">
+<div class="main" style="background-image: url('images/site/video_bg.jpg')">
 <video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
             <source src="video/time.webm" type="video/webm">
             <source src="video/time.mp4" type="video/mp4">
