--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   </div><!-- /.container -->
 </nav>
 <div class="main" style="background-image: url('images/site/video_bg.jpg')">
-<video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+<!--<video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
             <source src="video/time.webm" type="video/webm">
             <source src="video/time.mp4" type="video/mp4">
             Video not supported
-        </video>
+        </video> -->
 <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
     
     <div class="cover black" data-color="black"></div>
