--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
             <div class="subscribe">
                 <h5 class="info-text">
-                   Nothing is built in a day, give us time. We'll be up and running shortly.
+                   Rome wasn't built in a day, give us time. We'll be up and running shortly.
                 </h5>
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
