--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
             <li>
+                <a href="https://www.be.net/angadluthra"> 
+                    <i class="fa fa-behance"></i>
+                 
+                </a>
+            </li>
+          <li>
                 <a href="https://www.instagram.com/angadluthra"> 
                     <i class="fa fa-instagram"></i>
                  
