--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
             <li>
-                <a href="https://www.be.net/angadluthra"> 
+                <a href="https://www.behance.net/angadluthra"> 
                     <i class="fa fa-behance"></i>
                  
                 </a>
