--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="uCard - Responsive HTML5 vCard Template">
-        <meta name="keywords" content="vcard, html5, portfolio">
-        <meta name="author" content="Pixelwars">
+        <meta name="description" content="Angad Luthra - Personal Portfolio">
+        <meta name="keywords" content="vcard, html5, portfolio, angad, luthra">
+        <meta name="author" content="AngadLuthra">
 
-        <title>uCard</title>
+        <title>Angad Luthra</title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/ico/favicon.ico">
