--- a/testforgif.html
+++ b/testforgif.html
@@ -29,7 +29,7 @@
         <br>
         <br><br><br>
          <h1 class="logo">
-            <img src="images/Art-Attackk-#LiesDesignersTellTheirClient.gif" style="width:700px" alt="Angad Luthra Logo" align="center">
+            <img src="images/12.gif" style="width:700px" alt="Angad Luthra Logo" align="center">
         </h1>
         
         
