--- a/portfolio.html
+++ b/portfolio.html
@@ -203,11 +203,11 @@
                                                         <div class="media-box">
                                                             <img src="images/portfolio/05.jpg" alt="portfolio-post">
                                                             <div class="mask"></div>
-                                                            <a href="portfolio-item-01.html" class="ajax"></a>
+                                                            <a href="airbnb.html" class="ajax"></a>
                                                         </div>
                             
                                                         <div class="media-cell-desc">
-                                                            <h3>Airbnb and Waze</h3>
+                                                            <h3>Airbnb </h3>
                                                             <p class="category">an advertisement work</p>
                                                         </div>
                             
