--- a/waze.html
+++ b/waze.html
@@ -197,7 +197,7 @@
                                                         <p>A project to make creatives for Waze. This project was divided in three sections. The first was research, the second was to create a magazine campaign and to provide a GIF that can be placed on websites as adverts. </p>
                                                   
                                                            <p>
-                                                            <a href=".../pdfs/Waze.pdf"  target="_blank" class="button">Research</a>
+                                                            <a href="pdfs/Waze.pdf"  target="_blank" class="button">Research</a>
                                                         </p>
                                                         
                                                     </div>
