--- a/portfolio.html
+++ b/portfolio.html
@@ -318,7 +318,7 @@
                                         
                                                     
                                                        <!-- portfolio-item -->
-                                                    <div class="media-cell app hentry">
+                                                    <div class="media-cell web hentry">
                                                         <div class="media-box">
                                                             <img src="images/portfolio/bottlekhol.png" alt="portfolio-post">
                                                             <div class="mask"></div>
