--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(document).ready(function () {
                                             <!-- fun-fact -->
                                             <div class="fun-fact">
                                                 <i class="pe-7s-mail"></i>
-                                                <h4>me [at] angadluthra.com</h4>
+                                                <h4>contact [at] angadluthra.com</h4>
                                             </div>
                                             <!-- fun-fact -->
                         
