Changes to Ideate

--- a/bottlepop.html
+++ b/bottlepop.html
@@ -67,7 +67,7 @@
                               <a class="header-title-link"href="https://angadluthra.me">
                                  <img border="0" alt="Logo" src="images/site/finallogo.png" width="448" height="198"></a>
                         
-                        <p class="site-description">I am <strong id="typist-element" data-typist="a designer., an innovator., an entrepreneur.">practical.</strong></p>
+                        <p class="site-description">Together, let's <strong id="typist-element" data-typist="create., brand., innovate.">ideate.</strong></p>
                         
                         <!-- header-social -->
                         <div class="header-bottom">
