--- a/vibrant.html
+++ b/vibrant.html
@@ -71,12 +71,12 @@
                         <!-- header-social -->
                         <div class="header-bottom">
                         
-                            <!-- SOCIAL -->
+                             <!-- SOCIAL -->
                             <p>
-                                <a class="social-link facebook" href="https://www.facebook.com/angadsinghluthra"></a>
+                                <a class="social-link facebook" href="https://www.facebook.com/angadluthradesign"></a>
                                 <a class="social-link behance" href="https://www.behance.net/angadluthra"></a>
                                 <a class="social-link linkedin" href="https://in.linkedin.com/in/angadsinghluthra"></a>
-                                <a class="social-link instagram" href="https://wwww.instagram.com/angadluthra"></a>
+                                <a class="social-link instagram" href="https://wwww.instagram.com/angadluthradesign"></a>
                             </p>
                             <!-- SOCIAL -->
                             
