--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Angad Luthra's Personal Portfolio">
+        <meta name="description" content="Angad Luthra Designs is a creative design agency with clients in India, London, Dubai and Switzerland. Digital Media | Social Media Marketing | Packaging Design | Website Design | Visual Merchandising | Graphic Design | New Delhi | India">
         <meta name="keywords" content="vcard, html5, portfolio, india, wordlwide">
         <meta name="author" content="Angad Luthra">
 
-        <title>Angad Luthra </title>
+        <title>Angad Luthra Designs | Graphic Design</title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/ico/favicon.ico">
