--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en" class="no-js one-page-layout">
 <head>
     
-		<meta charset="utf-8" />
+	<title>Angad Luthra Designs | Graphic Design</title>	
+    <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Angad Luthra Designs is a creative design agency with clients in India, London, Dubai and Switzerland. Digital Media | Social Media Marketing | Packaging Design | Website Design | Visual Merchandising | Graphic Design | New Delhi | India">
-        <meta name="keywords" content="vcard, html5, portfolio, india, wordlwide">
+        <meta name="description" content="Trusted by companies in London, Dubai, India, Switzerland. Digital Media | Social Media Marketing | Packaging Design | Website Design | Visual Merchandising | Graphic Design | New Delhi | India">
+        <meta name="keywords" content="designer, graphic, graphic designer, packaging, social media, media, marketing, design">
         <meta name="author" content="Angad Luthra">
 
-        <title>Angad Luthra Designs | Graphic Design</title>
+        
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/ico/favicon.ico">
