--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Trusted by companies in London, Dubai, India, Switzerland. Digital Media | Social Media Marketing | Packaging Design | Website Design | Visual Merchandising | Graphic Design | New Delhi | India">
         <meta name="keywords" content="designer, graphic, graphic designer, packaging, social media, media, marketing, design">
         <meta name="author" content="Angad Luthra">
+   <meta name=”robots” content=”noodp,noydir” />
 
         
 
