--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ $(document).ready(function () {
                                             <div>
                                                 <i class="pe-7s-user"></i>
                                                 <h2>about</h2>
-                                                <p>a resume will help you understand</p>
+                                                <p>a detailed resume</p>
                                                 <b>View More</b>
                                             </div>
                                         </a>
