--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Angad Luthra's Personal Portfolio">
+        <meta name="description" content="Angad Luthra | Personal Portfolio">
         <meta name="keywords" content="vcard, html5, portfolio, india, wordlwide">
         <meta name="author" content="Angad Luthra">
 
