--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ $(document).ready(function () {
                         
                                     <li class="cd-item">
                                     	<img src="images/home/resume.jpg" alt="image">
-                                        <a href="about.html" data-slug="resume">
+                                        <a href="about.html" data-slug="about">
                                             <div>
                                             	<i class="pe-7s-id"></i>
                                                 <h2>clients & serivces</h2>
