--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@ $(document).ready(function () {
                         
                                     <li class="cd-item">
                                    		<img src="images/home/blog.jpg" alt="image">
-                                        <a href="mailto:contact@angadluthra.com" data-slug="contact">
+                                        <a href="contact.html" data-slug="contact">
                                             <div>
-                                            	<i class="pe-7s-wine"></i>
+                                            	<i class="pe-7s-mail"></i>
                                                 <h2>contact</h2>
                                                 <p>Drop me a message, maybe we could work together!</p>
                                                 <b>View More</b>
@@ -315,7 +315,7 @@ $(document).ready(function () {
                         <!-- .site-info --> 
                         <div class="site-info">
                             <div class="textwidget">
-                                <a href="#">Copyright &copy; 2017 by Angad Luthra</a>
+                                <a href="#">Copyright &copy; 2018 by Angad Luthra</a>
                             </div>
                         </div>
                         <!-- .site-info --> 
