--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ $(document).ready(function () {
                                    		<img src="images/home/blog.jpg" alt="image">
                                         <a href="contact.html" data-slug="contact">
                                             <div>
-                                            	<i class="pe-7s-mail"></i>
+                                            	<i class="pe-7s-user"></i>
                                                 <h2>contact</h2>
                                                 <p>Drop me a message, maybe we could work together!</p>
                                                 <b>View More</b>
