--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@ $(document).ready(function () {
                         
                                     <li class="cd-item">
                                    		<img src="images/home/blog.jpg" alt="image">
-                                        <a href="contact.html" data-slug="contact">
+                                        <a href="mailto:contact@angadluthra.com" data-slug="contact">
                                             <div>
-                                            	<i class="pe-7s-user"></i>
+                                            	<i class="pe-7s-mail"></i>
                                                 <h2>contact</h2>
                                                 <p>Drop me a message, maybe we could work together!</p>
                                                 <b>View More</b>
