--- a/resume.html
+++ b/resume.html
@@ -228,6 +228,12 @@ creating content for the firm.
                                                                 <!--<img src="images/site/icon-03.png" alt="image"/>-->
                                                             </p>
                                                         </div>
+                        <div class="event">
+                                                            <h3>2018</h3>
+                                                            <h4>Srishti Institute of Art, Design and Technology</h4>
+                                                            <h5>Graphic Design</h5>
+                                                            <p>We've all heard just 1 more year...</p>
+                                                        </div>
                         
                                                         <div class="event">
                                                             <h3>2015</h3>
