--- a/mgt.html
+++ b/mgt.html
@@ -308,7 +308,7 @@ resources and assets.</p><br>
                                                 </div>
                                                 <!-- row -->
                                                 <!-- PROCESS --><br>
-                                                <a href="pdfs/SECUREHimalayas_Optimised"  target="_blank" class="button">Download Project Documentation</a><br>
+                                                <a href="pdfs/SECUREHimalayas_Optimised.pdf"  target="_blank" class="button">Download Project Documentation</a><br>
 
 
                                                     <br>
