--- a/mgt.html
+++ b/mgt.html
@@ -187,7 +187,7 @@
                                                     <div class="mini-text">
                                                         <h4>ABOUT THE PROJECT</h4>
                                                         <p>This project aims to create a website as a resource in the form of a website for the
-SECURE Himalayas Programme. <a href="https://www.securehimalayas.org"  target="_blank" class="button">VISIT WEBSITE</a>
+SECURE Himalayas Programme. <a href="http://www.securehimalayas.org"  target="_blank" class="button">VISIT WEBSITE</a>
  </p> </div><img src="images/mgt/c.png"
                                                      <p align="left">12 countries come together to participate in a global movemement to SECURE the high range himalayan region.
 
